# Algoverse---Chrono-MemBench

./: ....  .env.template  .gitignore  COLAB_FLASH_ATTENTION_FIX.md  COLAB_LINKS.md  DATASET_WANDB_ANALYSIS.md  README.md  README_RTX6000ADA.md  TRAINING_README.md  VERSION  environment-gpu.yml  environment.yml  fix_flash_attention.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yml
configs/: chrono_membench.yaml  chrono_membench_rtx6000ada_optimized.yaml  chrono_membench_t4_optimized.yaml  colab-t4-16g.yaml  common.yaml  dummy_amp.yaml  gemma_2b.yaml  gtx1070-8g.yaml  gtx1070_complete.yaml  llama_3_8b.yaml  platform_config.yaml  pythia70m.yml  rtx6000-48g.yaml  training_base.yaml
data/models/: .gitignore  gemma-2b.dvc  llama3-8b.dvc  llava-1.6-7b.dvc
data/raw/: .gitignore  .gitkeep  HuggingFaceFW_fineweb_edu_edu_web_train.jsonl.dvc  bookcorpus_books_train.jsonl.dvc  dataset_summary.json  microsoft_orca_math_word_problems_200k_math_reasoning_train.jsonl.dvc  wikitext_wiki103_train.jsonl.dvc
docs/: ARCHITECTURE.md  CHRONO_TRAINING_README.md  README.md
legacy/: download_datasets.py
legacy/chrono_legacy/: chrono_train.py
legacy/chrono_sae_training/: train.py
membench_x/: metrics.py
notebooks/: 01_quickstart.ipynb  README.md  chrono_colab_template.ipynb  chrono_membench_colab.ipynb  chrono_membench_colab_universal.ipynb  training_colab_template.ipynb
scripts/: bootstrap_env.py  find_orphans.py  test_config_fix.py  train.py  train_macos.py
src/: chrono_cli.py
src/algoverse/: __init__.py
src/chatgpt2/: __init__.py  cli.py
src/chrono/: chrono_train.py  data_loader.py  train.py
src/chrono_sae/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py  test_basic_pipeline.py
tests/smoke/: __init__.py  test_amp_training.py  test_basic_functionality.py  test_chrono_sae.py
tests/unit/: __init__.py  test_config.py  test_metrics_shapes.py
training/: loop.py  train.py
(+13 files in other folders)
